fix: broken styles

--- a/src/scss/section/_fundingForm.scss
+++ b/src/scss/section/_fundingForm.scss
@@ -54,5 +54,6 @@
   .mobile-form {
     display: block;
     padding: 0 0px 0 0px !important; 
+    overflow: hidden !important;
   }
 }
