--- a/src/scss/section/_videoSection.scss
+++ b/src/scss/section/_videoSection.scss
@@ -46,7 +46,7 @@
       background-color: rgb(0, 174, 199);
       color: #fff;
       width: 60%;
-      padding: 20px;
+      padding: 10px;
       border-top-right-radius: 10px;
       border-bottom-right-radius: 10px;
       display: flex;
